--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 /node_modules
 /.pnp
 .pnp.js
-
 # testing
 /coverage
 
@@ -14,10 +13,13 @@
 
 # misc
 .DS_Store
+# Environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
