basic connect and return frontend backend

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "adidasShop",
+  "type": "module",
   "scripts": {
     "start": "Node backend/server.js",
     "server": "nodemon backend/server.js",
@@ -9,7 +10,7 @@
     "data:destroy": "node backend/seeder.js -d"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.0",
     "color": "^5.0.0",
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.7",
